*casually refactors literally everything*